--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 /.idea/
 /nbproject/
 *.map
-/public_html/zeta/*.js
-/public_html/zeta/*/*.js
-/public_html/zeta/*/*/*.js
+/public_html/zeta/**/*.js
