First unit test to check if the login from the user service works.

--- a/config/jsTestDriver.conf
+++ b/config/jsTestDriver.conf
@@ -1,8 +1,20 @@
 server: http://localhost:42442
 
 load:
+  # Test setup
   - test/lib/jasmine/jasmine.js
   - test/lib/jasmine-jstd-adapter/JasmineAdapter.js
   - test/unit/*.js
+  
+  # Zeta.Utils
+  - public_html/zeta/utils/namespace.js
+  # Zeta.Model
+  - public_html/zeta/model/login.js
+  - public_html/zeta/model/user.js
+  # Zeta.Storage
+  - public_html/zeta/storage/session.js
+  - public_html/js/libs/jquery/2.1.0/jquery-2.1.0.min.js
+  - public_html/zeta/service/user_service_mock.js
+  - public_html/zeta/service/main.js
 
 exclude:
